Fix IE layout issue
svn commit r33463

--- a/www/styles/base.css
+++ b/www/styles/base.css
@@ -14,6 +14,10 @@ body {
 	.height: 1%;
 }
 
+#bd {
+	position: relative;
+}
+
 #content {
 	margin-right: 250px;
 }
